@startuml

title __LOGIN's Class Diagram__\n

  namespace com.example.cm2305 {
    namespace ui.login {
      class com.example.cm2305.ui.login.LoggedInUserView {
          - displayName : String
          ~ LoggedInUserView()
          ~ getDisplayName()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace ui.login {
      class com.example.cm2305.ui.login.LoginActivity {
          + onCreate()
          - showLoginFailed()
          - updateUiWithUser()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace ui.login {
      class com.example.cm2305.ui.login.LoginFormState {
          - isDataValid : boolean
          - passwordError : Integer
          - usernameError : Integer
          ~ LoginFormState()
          ~ LoginFormState()
          ~ getPasswordError()
          ~ getUsernameError()
          ~ isDataValid()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace ui.login {
      class com.example.cm2305.ui.login.LoginResult {
          - error : Integer
          ~ LoginResult()
          ~ LoginResult()
          ~ getError()
          ~ getSuccess()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace ui.login {
      class com.example.cm2305.ui.login.LoginViewModel {
          - loginFormState : MutableLiveData<LoginFormState>
          - loginResult : MutableLiveData<LoginResult>
          + login()
          + loginDataChanged()
          ~ LoginViewModel()
          ~ getLoginFormState()
          ~ getLoginResult()
          - isPasswordValid()
          - isUserNameValid()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace ui.login {
      class com.example.cm2305.ui.login.LoginViewModelFactory {
          + create()
      }
    }
  }
  

  com.example.cm2305.ui.login.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.cm2305.ui.login.LoginActivity o-- com.example.cm2305.databinding.ActivityLoginBinding : binding
  com.example.cm2305.ui.login.LoginActivity o-- com.example.cm2305.ui.login.LoginViewModel : loginViewModel
  com.example.cm2305.ui.login.LoginResult o-- com.example.cm2305.ui.login.LoggedInUserView : success
  com.example.cm2305.ui.login.LoginViewModel -up-|> androidx.lifecycle.ViewModel
  com.example.cm2305.ui.login.LoginViewModel o-- com.example.cm2305.data.LoginRepository : loginRepository
  com.example.cm2305.ui.login.LoginViewModelFactory .up.|> androidx.lifecycle.ViewModelProvider.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
